handling imbalance data using SMOTE

--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "4                                          👏👏👏  positive          0.934906"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4                                          👏👏👏  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "4                                          👏👏👏  positive          0.934906  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "4                                          👏👏👏  positive  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
        "5                             Santai menuju 😅😂   neutral  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "5                             santai menuju 😅😂   neutral  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "       'emang pernah dibegal ya', 'ponorogo?', 'ayo ras'], dtype=object)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
        "       'ponorogo', 'ayo ras'], dtype=object)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
        "5                      santai menuju   neutral  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
        "True"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
        "5                         [santai, menuju]  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1619,7 @@
        "5                             [santai]  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1663,18 +1663,26 @@
       "Requirement already satisfied: locket in c:\\users\\acer\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from partd>=1.2.0->dask>=2.10.0->dask[dataframe]>=2.10.0->swifter) (1.0.0)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\acer\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->swifter) (1.16.0)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Acer\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
     }
    ],
    "source": [
-    "!pip install Sastrawi\n",
-    "!pip install swifter\n",
+    "# !pip install Sastrawi\n",
+    "# !pip install swifter\n",
     "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
     "import swifter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2713,7 +2721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2833,7 @@
        "5                             [santai]                             [santai]  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2836,14 +2844,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Pandas Apply: 100%|██████████| 417/417 [00:00<00:00, 416236.26it/s]\n"
+      "Pandas Apply: 100%|██████████| 417/417 [00:00<00:00, 417328.74it/s]\n"
      ]
     }
    ],
@@ -2856,7 +2864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2987,7 +2995,7 @@
        "5                             [santai]                          santai  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3001,7 +3009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3022,7 +3030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3045,7 +3053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3094,7 +3102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3114,41 +3122,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "X = df['text_final']\n",
+    "y = df['Sentiment']\n",
+    "\n",
+    "tfidf_vectorizer = TfidfVectorizer()\n",
+    "\n",
+    "X_tfidf = tfidf_vectorizer.fit_transform(X)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_tfidf, y, test_size=0.1, random_state=1, shuffle=True)\n",
+    "\n",
+    "smote = SMOTE(random_state=42)\n",
+    "\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 65.07936507936508%\n",
+      "Sentiment\n",
+      "negative    189\n",
+      "positive    189\n",
+      "neutral     189\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_train_resampled.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9453262786596119\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    negative       0.36      0.31      0.33        13\n",
-      "     neutral       1.00      0.15      0.27        13\n",
-      "    positive       0.70      0.95      0.80        37\n",
+      "    negative       0.95      0.93      0.94       189\n",
+      "     neutral       0.90      0.98      0.94       189\n",
+      "    positive       0.99      0.93      0.96       189\n",
       "\n",
-      "    accuracy                           0.65        63\n",
-      "   macro avg       0.69      0.47      0.47        63\n",
-      "weighted avg       0.69      0.65      0.60        63\n",
+      "    accuracy                           0.95       567\n",
+      "   macro avg       0.95      0.95      0.95       567\n",
+      "weighted avg       0.95      0.95      0.95       567\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "svm_classifier = SVC(kernel='linear')\n",
-    "svm_classifier.fit(X_train, y_train)\n",
-    "y_pred_svm = svm_classifier.predict(X_test)\n",
-    "accuracy_svm = accuracy_score(y_test, y_pred_svm)\n",
-    "print(f\"Accuracy: {accuracy_svm*100}%\")\n",
+    "nb_classifier_smote = MultinomialNB()\n",
+    "nb_classifier_smote.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "# Predict labels for the test data\n",
+    "y_pred_resampled = nb_classifier_smote.predict(X_train_resampled)\n",
+    "\n",
+    "# Evaluate the performance of the classifier\n",
+    "accuracy = accuracy_score(y_train_resampled, y_pred_resampled)\n",
+    "print(\"Accuracy:\", accuracy)\n",
+    "\n",
+    "# Print classification report\n",
     "print(\"Classification Report:\")\n",
-    "print(classification_report(y_test, y_pred_svm))"
+    "print(classification_report(y_train_resampled, y_pred_resampled))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3160,15 +3216,15 @@
     }
    ],
    "source": [
-    "sentence = 'candi prambanan tempatnya panas'\n",
+    "sentence = 'candi prambanan tempatnya panas, keluarnya jauh pula'\n",
     "sentence_vectorized = tfidf_vectorizer.transform([sentence])\n",
-    "prediction = svm_classifier.predict(sentence_vectorized)\n",
+    "prediction = nb_classifier_smote.predict(sentence_vectorized)\n",
     "print(f\"Predicted Sentiment: {prediction[0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3180,9 +3236,29 @@
     }
    ],
    "source": [
-    "sentence = 'candi prambanan tempatnya bagus'\n",
+    "sentence = 'tempatnya keren banget'\n",
     "sentence_vectorized = tfidf_vectorizer.transform([sentence])\n",
-    "prediction = svm_classifier.predict(sentence_vectorized)\n",
+    "prediction = nb_classifier_smote.predict(sentence_vectorized)\n",
+    "print(f\"Predicted Sentiment: {prediction[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Sentiment: neutral\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = 'di sini ada jualan makanan ga ya?'\n",
+    "sentence_vectorized = tfidf_vectorizer.transform([sentence])\n",
+    "prediction = nb_classifier_smote.predict(sentence_vectorized)\n",
     "print(f\"Predicted Sentiment: {prediction[0]}\")"
    ]
   },
